--- a/style.css
+++ b/style.css
@@ -12,6 +12,17 @@ body {
   width: 100%;
 }
 
+#cursor {
+  width: 2.5vw;
+  height: 2.5vw;
+  border-radius: 50%;
+  border: 1px solid #ffffffa8;
+  position: fixed;
+  z-index: 997;
+  mix-blend-mode: difference;
+  transform: translate(-50%, -50%);
+}
+
 #loader {
   width: 100%;
   height: 100%;
@@ -110,4 +121,79 @@ body {
   height: 100vh;
   width: 100%;
   background-color: #151515;
+}
+
+#page1 #nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2vw 6.5vw;
+  position: relative;
+}
+
+#page1 #svg-container {
+  display: flex;
+  align-items: center;
+  gap: 2.5vw;
+}
+
+#nav h3 {
+  /* background-color: red; */
+  width: 5vw;
+  font-size: 1vw;
+  font-weight: 500;
+  margin-left: -30vw;
+  position: relative;
+  top: 1.5vw;
+  line-height: 1;
+}
+
+#nav-part2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2vw;
+}
+
+#nav-part2 h4 {
+  font-size: 1vw;
+  font-weight: 500;
+}
+
+.hero {
+  /* background-color: red; */
+  width: 71%;
+  margin-left: 29%;
+  height: fit-content;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index: 998;
+}
+
+.hero:nth-child(2) {
+  margin-top: 18vh;
+}
+
+.hero h1 {
+  font-size: 7vw;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 1.05;
+  letter-spacing: 0.5vh;
+}
+
+.hero h2 {
+  font-size: 7vw;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 1.05;
+  letter-spacing: 0.5vh;
+}
+
+.hero h2:hover {
+  -webkit-text-stroke: 2px #fff;
+  color: transparent;
+  font-weight: 500;
 }
